# oms-wms-tms

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: ac07bc39423d_initial.py
docker/: Dockerfile
docker/nginx/: default.conf
mobile/: App.js  app.json  package.json
src/: celery_app.py  celeryconf.py  config.py  main.py
src/admin/: __init__.py  router.py
src/auth/: __init__.py  models.py  router.py  schemas.py  service.py  token_store.py
src/barcode/: __init__.py  models.py  router.py  schemas.py  service.py
src/cache/: __init__.py  decorators.py  redis_client.py
src/core/: database.py  dependencies.py  exceptions.py  middleware.py  rate_limiter.py  response.py  security.py
src/logistics/: __init__.py  carriers.py
src/ml/: __init__.py  forecast.py
src/models/: __init__.py  base.py
src/oms/: __init__.py  models.py  router.py  schemas.py  service.py
src/tasks/: __init__.py  base.py  example.py  inventory.py  maintenance.py  orders.py
src/tms/: __init__.py  models.py  push_service.py  router.py  schemas.py  service.py
src/wms/: __init__.py  models.py  router.py  schemas.py  service.py
tests/: conftest.py  test_cache.py  test_database.py  test_health.py  test_logistics_ml.py  test_middleware.py  test_rate_limiter.py  test_security.py
tests/auth/: test_auth.py  test_auth_service.py  test_models.py  test_models_unit.py  test_token_store.py
tests/test_admin/: test_admin.py
(+29 files in other folders)
